k8s/06-api-pagamentos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-pagamentos-svc
  namespace: unifiapay
spec:
  # Tipo NodePort: Expõe o serviço em uma porta estática no IP de cada Node.
  # Ideal para testes no Minikube.
  type: NodePort
  selector:
    # Direciona o tráfego para Pods com esta label
    app: api-pagamentos
  ports:
    - protocol: TCP
      port: 80 # Porta interna do Service
      targetPort: 8081 # Porta do container (definida no Deployment)
      # nodePort: 30001 # Opcional: Você pode definir uma porta fixa ou deixar o K8s escolher
