k8s/09-networkpolicy-allow-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-api-pagamentos
  namespace: unifiapay
spec:
  # Aplica esta regra apenas aos Pods com esta label
  podSelector:
    matchLabels:
      app: api-pagamentos
  
  # Define que esta é uma regra de entrada (Ingress)
  policyTypes:
  - Ingress
  
  ingress:
  - ports:
    - protocol: TCP
      port: 8081 # Libera a porta do container
    # Ao não especificar um 'from', permitimos tráfego de todas as fontes
    # (necessário para testes via NodePort/LoadBalancer)
